<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.android.albert.ng911.MainActivity"
                tools:showIn="@layout/activity_main"
                android:id="@+id/mainLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NG_911_options"
            android:id="@+id/titleView"
            style="@style/AlertDialog.AppCompat"
            android:accessibilityLiveRegion="polite"
            android:capitalize="words"
            android:textStyle="bold"
            android:layout_alignParentTop="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/first_name"
        android:id="@+id/firstname"
        android:layout_above="@+id/relativeLayout"
        android:layout_toEndOf="@+id/titleView"
        android:layout_marginStart="80dp" />

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/titleView"
            android:layout_below="@+id/titleView"
            android:layout_alignParentEnd="true"
            android:id="@+id/relativeLayout"
        android:background="@color/MainBackground">

        <Button android:id="@+id/callButton"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:text="@string/call_911"
            android:textSize="35dp"
            android:textStyle="bold"
            android:layout_marginTop="55dp"
            android:layout_centerHorizontal="true"
            android:background="@color/red" />

        <Button android:id="@+id/statusButton"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:text="@string/status"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/callButton"
            android:layout_centerHorizontal="true"
            android:background="#f77474" />

        <Button android:id="@+id/infoButton"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:text="@string/info_help"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/statusButton"
            android:layout_centerHorizontal="true"
            android:background="#f77474" />

    </RelativeLayout>


</RelativeLayout>
